# neat-prospect-theory

./: .gitignore  README.md  prospect_theory_experiment.ipynb  pyproject.toml  xor_experiment.ipynb
experiment_configs/: config-feedforward  prospect-theory-simple
